# OpenGLGameEngine

./: .gitignore  CMakeLists.txt
assets/materials/: brick.mat  suzanne.mat
assets/shaders/: fragment.glsl  vertex.glsl
engine/: CMakeLists.txt  config.h.in
engine/source/: Application.cpp  Application.h  Common.h  Engine.cpp  Engine.h  GLTF.cpp  eng.h
engine/source/graphics/: GraphicsAPI.cpp  GraphicsAPI.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexLayout.h
engine/source/input/: InputManager.cpp  InputManager.h
engine/source/io/: FileSystem.cpp  FileSystem.h
engine/source/render/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderQueue.cpp  RenderQueue.h
engine/source/scene/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
engine/source/scene/components/: CameraComponent.cpp  CameraComponent.h  LightComponent.cpp  LightComponent.h  MeshComponent.cpp  MeshComponent.h  PlayerControllerComponent.cpp  PlayerControllerComponent.h
source/: Game.cpp  Game.h  main.cpp
source/BaseObjects/: TestObject.cpp  TestObject.h
